ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Customer_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Qualification__c</fullName>
    <label>Customer Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P3</fullName>
                <label>A.C.S</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>B.A</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>B.COM</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>B.Sc</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>C.A</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>I.C.W.A</label>
            </value>
            <value>
                <fullName>B5</fullName>
                <label>M.A</label>
            </value>
            <value>
                <fullName>B6</fullName>
                <label>M.COM</label>
            </value>
            <value>
                <fullName>B4</fullName>
                <label>M.SC</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <label>M.B.A</label>
            </value>
            <value>
                <fullName>P5</fullName>
                <label>M.C.A</label>
            </value>
            <value>
                <fullName>P6</fullName>
                <label>B.E</label>
            </value>
            <value>
                <fullName>P7</fullName>
                <label>M.E</label>
            </value>
            <value>
                <fullName>P8</fullName>
                <label>P.G.D.C.A</label>
            </value>
            <value>
                <fullName>P9</fullName>
                <label>H.R.D</label>
            </value>
            <value>
                <fullName>P10</fullName>
                <label>D.C.A</label>
            </value>
            <value>
                <fullName>P11</fullName>
                <label>D.B.M</label>
            </value>
            <value>
                <fullName>P12</fullName>
                <label>L.L.B</label>
            </value>
            <value>
                <fullName>B7</fullName>
                <label>S S L C</label>
            </value>
            <value>
                <fullName>P14</fullName>
                <label>D.M.M</label>
            </value>
            <value>
                <fullName>P15</fullName>
                <label>P.G.D.M.M</label>
            </value>
            <value>
                <fullName>P16</fullName>
                <label>D P E C</label>
            </value>
            <value>
                <fullName>P17</fullName>
                <label>D.M.E</label>
            </value>
            <value>
                <fullName>P18</fullName>
                <label>OTHERS</label>
            </value>
            <value>
                <fullName>P19</fullName>
                <label>ICWA INTER</label>
            </value>
            <value>
                <fullName>P20</fullName>
                <label>M.M.S</label>
            </value>
            <value>
                <fullName>P21</fullName>
                <label>D.I.R.&amp;P.M</label>
            </value>
            <value>
                <fullName>P22</fullName>
                <label>D.B.A</label>
            </value>
            <value>
                <fullName>ILLI</fullName>
                <label>ILLITERATE</label>
            </value>
            <value>
                <fullName>ELEM</fullName>
                <label>ELEMENTARY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>