ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Declaration_of_Good_Health__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_Good_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration of Good Health</label>
    <type>Checkbox</type>
</CustomField>