ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Declared_income__c.field-meta.xml
<CustomField>
    <fullName>Declared_income__c</fullName>
    <label>Declared income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>