ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Dedupe_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Journey_Status__c</fullName>
    <label>Dedupe Journey Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>