ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-mature leads</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Warm leads - call back</fullName>
            </value>
            <value>
                <fullName>Deferred leads - call back</fullName>
            </value>
            <value>
                <fullName>Completed leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>