ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/District_Ref_1__c.field-meta.xml
<CustomField>
    <fullName>District_Ref_1__c</fullName>
    <label>District Ref 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>