ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Do_you_file_ITR__c.field-meta.xml
<CustomField>
    <fullName>Do_you_file_ITR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you file ITR ?</label>
    <type>Checkbox</type>
</CustomField>