ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Do_you_have_a_bank_account_with_IBL__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_bank_account_with_IBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a bank account with IBL ?</label>
    <type>Checkbox</type>
</CustomField>