ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Do_you_have_credit_banking__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_credit_banking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have credit banking ?</label>
    <type>Checkbox</type>
</CustomField>