ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/DocAuth_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>DocAuth_Application_Id__c</fullName>
    <label>DocAuth Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>