ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Document_Count__c.field-meta.xml
<CustomField>
    <fullName>Document_Count__c</fullName>
    <label>Document Count</label>
    <summaryFilterItems>
        <field>Documents__c.Document_Type__c</field>
        <operation>equals</operation>
        <value>Email Attachment</value>
    </summaryFilterItems>
    <summaryForeignKey>Documents__c.Applicant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>