ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Document_Count_for_TVR__c.field-meta.xml
<CustomField>
    <fullName>Document_Count_for_TVR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Document Count for TVR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>