ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload__c</fullName>
    <formula>HYPERLINK( $Label.IND_DSA_Community_URL &amp;&apos;/s/post-saction-document?applicantid=&apos;+ CASESAFEID(Id)+&apos;&amp;Oppid=&apos;+ CASESAFEID(Opportunity__c) , &apos;Upload Document&apos; , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Upload</label>
    <type>Text</type>
</CustomField>