ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Driving_License_Front_Upload_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Front_Upload_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Driving License Front Upload Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>