ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Driving_License_No__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_No__c</fullName>
    <label>Driving License No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>