ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/DSA_DisbursedLead_Filter__c.field-meta.xml
<CustomField>
    <fullName>DSA_DisbursedLead_Filter__c</fullName>
    <formula>Opportunity__r.CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSA_DisbursedLead_Filter</label>
    <type>Checkbox</type>
</CustomField>