ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/DSA_DOB__c.field-meta.xml
<CustomField>
    <fullName>DSA_DOB__c</fullName>
    <label>DSA DOB</label>
    <type>Date</type>
</CustomField>