ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Email_Fail_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Fail_Count__c</fullName>
    <label>Email Fail Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>