ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Email_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_2__c</fullName>
    <label>Email Id 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>