ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Email_Id_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_3__c</fullName>
    <label>Email Id 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>