ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Email_Id_3_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_3_Status__c</fullName>
    <label>Email Id 3 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Unverifiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>