ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email-Id</label>
    <type>Email</type>
</CustomField>