ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/EMI_API_Count__c.field-meta.xml
<CustomField>
    <fullName>EMI_API_Count__c</fullName>
    <label>EMI API Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>