ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/EMI_paid__c.field-meta.xml
<CustomField>
    <fullName>EMI_paid__c</fullName>
    <label>EMI paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>