ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Employer_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Business_Name__c</fullName>
    <label>Employer/Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>