ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Employer_Type__c.field-meta.xml
<CustomField>
    <fullName>Employer_Type__c</fullName>
    <label>Employer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Govt Employee</fullName>
            </value>
            <value>
                <fullName>Private Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>