ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>