ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non-Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>