ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/EPFO_UAN_Number__c.field-meta.xml
<CustomField>
    <fullName>EPFO_UAN_Number__c</fullName>
    <label>EPFO UAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>