ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/FaceMismatch__c.field-meta.xml
<CustomField>
    <fullName>FaceMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FaceMismatch</label>
    <type>Checkbox</type>
</CustomField>