ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Father_s_name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_name__c</fullName>
    <label>Father&apos;s name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>