ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Feedback_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Ref_2__c</fullName>
    <label>Feedback Ref 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>