ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/First_Child__c.field-meta.xml
<CustomField>
    <fullName>First_Child__c</fullName>
    <label>First Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>