ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/FOIR__c.field-meta.xml
<CustomField>
    <fullName>FOIR__c</fullName>
    <label>FOIR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>