ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/FOIR_Check__c.field-meta.xml
<CustomField>
    <fullName>FOIR_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOIR Check</label>
    <type>Checkbox</type>
</CustomField>