ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Gating_Screening_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Gating_Screening_Outcome__c</fullName>
    <label>Gating Screening Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>