ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
            </value>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>OTHERS MALE</fullName>
            </value>
            <value>
                <fullName>OTHERS FEMALE</fullName>
            </value>
            <value>
                <fullName>OTHERS PREFER NOT TO DISCLOSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>