ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/GST_API_Count__c.field-meta.xml
<CustomField>
    <fullName>GST_API_Count__c</fullName>
    <label>GST API Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>