ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Having_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Having_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Having Bank Account?</label>
    <type>Checkbox</type>
</CustomField>