ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Having_Bank_Account_with_IIB__c.field-meta.xml
<CustomField>
    <fullName>Having_Bank_Account_with_IIB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Having Bank Account with IIB ?</label>
    <type>Checkbox</type>
</CustomField>