ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/I_worked_on_it__c.field-meta.xml
<CustomField>
    <fullName>I_worked_on_it__c</fullName>
    <formula>CONTAINS(Agents__c, $User.Id)</formula>
    <label>I worked on it</label>
    <type>Checkbox</type>
</CustomField>