ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/In_Active_Applicant__c.field-meta.xml
<CustomField>
    <fullName>In_Active_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Active Applicant</label>
    <type>Checkbox</type>
</CustomField>