ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_Ca__c.field-meta.xml
<CustomField>
    <fullName>Income_Ca__c</fullName>
    <label>Income Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>SENP</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>