ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_Detail_Captured__c.field-meta.xml
<CustomField>
    <fullName>Income_Detail_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Detail Captured</label>
    <type>Checkbox</type>
</CustomField>