ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_Details_Count__c.field-meta.xml
<CustomField>
    <fullName>Income_Details_Count__c</fullName>
    <description>No of Income details Captured for particular Applicant</description>
    <label>Income Details Count</label>
    <summaryForeignKey>Income_Details__c.Applicant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>