ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_from_Inc_source_1__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Inc_source_1__c</fullName>
    <label>Income from Inc. source 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>