ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_from_Perfios__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Perfios__c</fullName>
    <label>Income from Perfios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>