ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <label>Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earning</fullName>
            </value>
            <value>
                <fullName>Non-Earning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>