ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Income_source_available__c.field-meta.xml
<CustomField>
    <fullName>Income_source_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income source available ?</label>
    <type>Checkbox</type>
</CustomField>