ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Ageing__c.field-meta.xml
<CustomField>
    <fullName>IND_Ageing__c</fullName>
    <formula>CASE(Opportunity__r.DSA_isDisbursed__c,&apos;NA&apos;,&apos;N/A&apos;, &apos;YES&apos;,&apos;RC Transferred&apos;,&apos;NO&apos;,TEXT(TODAY()-DATEVALUE(Opportunity__r.Payment_Request_Generation_Date__c)),&apos;NA&apos;)</formula>
    <label>Ageing</label>
    <type>Text</type>
</CustomField>