ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Customer_Master_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>IND_Customer_Master_Creation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Master Creation Status</label>
    <type>Checkbox</type>
</CustomField>