ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Customer_Master_Updation_Status__c.field-meta.xml
<CustomField>
    <fullName>IND_Customer_Master_Updation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if Customer Master Updation API is success or Failure</description>
    <label>Customer Master Updation Status</label>
    <type>Checkbox</type>
</CustomField>