ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>IND_Disbursed_Amount__c</fullName>
    <label>Disbursement amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>