ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Lead_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>IND_Lead_Creation_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation Date</label>
    <type>DateTime</type>
</CustomField>