ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IND_Name__c.field-meta.xml
<CustomField>
    <fullName>IND_Name__c</fullName>
    <formula>Customer_First_Name__c +&quot; &quot;+ Customer_Last_Name__c</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>