ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Insurance_Consent_OTP__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Consent_OTP__c</fullName>
    <label>Insurance Consent OTP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>