ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Insurance_Consent_OTP_Time__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Consent_OTP_Time__c</fullName>
    <label>Insurance Consent OTP Time</label>
    <type>DateTime</type>
</CustomField>