ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Insurance_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Consent Received?</label>
    <type>Checkbox</type>
</CustomField>