ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Insurance_consent_sent_on__c.field-meta.xml
<CustomField>
    <fullName>Insurance_consent_sent_on__c</fullName>
    <label>Insurance Consent Received Time</label>
    <type>DateTime</type>
</CustomField>