ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Invalid_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Customer_Code__c</fullName>
    <label>Invalid Customer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>