ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IO_Check_Eligibility_Message__c.field-meta.xml
<CustomField>
    <fullName>IO_Check_Eligibility_Message__c</fullName>
    <description>In this field we will store the value of message returned by gattingCheckEligibility of Apex Class.</description>
    <label>IO Check Eligibility Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>