ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IO_Scorecard_Decision__c.field-meta.xml
<CustomField>
    <fullName>IO_Scorecard_Decision__c</fullName>
    <label>IO Scorecard Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>