ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Additional_Details_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Additional_Details_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional Details Submitted</label>
    <type>Checkbox</type>
</CustomField>