ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Address_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Address Declaration</label>
    <type>Checkbox</type>
</CustomField>