ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Blacklisted_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Blacklisted_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blacklisted Email Address</label>
    <type>Checkbox</type>
</CustomField>