ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Borrower_Relative_Of_Senior_Officer__c.field-meta.xml
<CustomField>
    <fullName>Is_Borrower_Relative_Of_Senior_Officer__c</fullName>
    <label>Is Borrower Relative Of Senior Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>