ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_CoBorrower_Relative_Of_Director__c.field-meta.xml
<CustomField>
    <fullName>Is_CoBorrower_Relative_Of_Director__c</fullName>
    <label>Is CoBorrower Relative Of Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>