ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Customer_NRI__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_NRI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer NRI?</label>
    <type>Checkbox</type>
</CustomField>