ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Email_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Valid</label>
    <type>Checkbox</type>
</CustomField>