ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Existing_EMI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Existing_EMI_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Existing EMI Submitted</label>
    <type>Checkbox</type>
</CustomField>