ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_ITR_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Is_ITR_Assessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_ITR_Assessed</label>
    <type>Checkbox</type>
</CustomField>