ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_Nesl_API_Succeed__c.field-meta.xml
<CustomField>
    <fullName>Is_Nesl_API_Succeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Nesl API Succeed</label>
    <type>Checkbox</type>
</CustomField>