ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_New_Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Customer_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Customer Journey</label>
    <type>Checkbox</type>
</CustomField>