ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Is_this_current_residence_cum_office__c.field-meta.xml
<CustomField>
    <fullName>Is_this_current_residence_cum_office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this current residence cum office ?</label>
    <type>Checkbox</type>
</CustomField>