ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/isAllRowSelected__c.field-meta.xml
<CustomField>
    <fullName>isAllRowSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAllRowSelected</label>
    <type>Checkbox</type>
</CustomField>