ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/isCodeValidateBySalesUser__c.field-meta.xml
<CustomField>
    <fullName>isCodeValidateBySalesUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCodeValidateBySalesUser</label>
    <type>Checkbox</type>
</CustomField>