ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IsExposureRecived__c.field-meta.xml
<CustomField>
    <fullName>IsExposureRecived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExposureRecived</label>
    <type>Checkbox</type>
</CustomField>