ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IsExposureTriggered__c.field-meta.xml
<CustomField>
    <fullName>IsExposureTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExposureTriggered</label>
    <type>Checkbox</type>
</CustomField>