ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IsTwFound__c.field-meta.xml
<CustomField>
    <fullName>IsTwFound__c</fullName>
    <label>IsTwFound</label>
    <length>3</length>
    <type>Text</type>
</CustomField>