ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/IsTWMatchLeadFound__c.field-meta.xml
<CustomField>
    <fullName>IsTWMatchLeadFound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTWMatchLeadFound</label>
    <type>Checkbox</type>
</CustomField>